# NSU-Labs

./: .gitignore  README.md
1 cource/: README.md
1 cource/AVL/: CMakeLists.txt  main.c
1 cource/calculator/: CMakeLists.txt
1 cource/calculator++/: run.bat
1 cource/diff/: CMakeLists.txt  main.c
1 cource/dijkstra/: test.bat
1 cource/find substr/: CMakeLists.txt  main.c
1 cource/huffman/: decoder.h  encoder.c  encoder.h  main.c  sc.bat  tree.c
1 cource/kruskal/: main.c
1 cource/notebook/: main.c
1 cource/qsort/: main.c
1 cource/stack/: main.c
1 cource/vernam code/: CMakeLists.txt
1 cource/wc/: CMakeLists.txt
2 cource/: README.md
2 cource/EVM/: README.md  lab1_bolshim_18209.odt  lab3_bolshim_18209.docx  lab4_bolshim_18209.docx  lab6_bolshim_18209.docx  lab7_bolshim_18209.odt  lab8_bolshim_18209.docx
3 cource/: README.md
4 cource/: README.md
DistributedSystems/lab2_gradle/: settings.gradle.kts
DistributedSystems/lab3/: settings.gradle.kts
Parallel OSI/1 lab/: main.c
Parallel OSI/13 lab/: main.c
Parallel OSI/16 lab/: main.c
Parallel OSI/2 lab/: main.c
Parallel OSI/22  lab/: main.c
Parallel OSI/3 lab/: main.c
Parallel OSI/4 lab/: main.c
Parallel OSI/5 lab/: main.c
Parallel OSI/8 lab/: main.c
Parallel OSI/9 lab/: main.c
Parallel OSI/proxy/multithread/: CMakeLists.txt  Cache.cpp  Cache.h  Client.cpp  Client.h  Monitor.cpp  Monitor.h  ProxyCore.cpp  ProxyCore.h  Server.cpp  Server.h  errhandle.h  http_parser.c  http_parser.h  lock_guard.cpp  lock_guard.h  main.cpp  monitor.cpp  monitor.h
bachelor_cources/2 cource/: README.md
bachelor_cources/2 cource/Parallel Computations/MPI_Threads/: CMakeLists.txt  README.md  list.cpp  list.h  main.cpp  messages.cpp  messages.h  threads.cpp  threads.h
bachelor_cources/3 cource/: README.md
bachelor_cources/4 cource/: README.md
c-labs/Block-program-executor/: BlockProgram.cpp  BlockProgram.h  CMakeLists.txt  DumpBlock.cpp  DumpBlock.h  FileReaderBlock.cpp  FileReaderBlock.h  FileWriterBlock.h  GrepBlock.h  README.md  ReplaceBlock.h  SortBlock.cpp  Validator.cpp  Validator.h  Worker.h  main.cpp
c-labs/SeaBattle/: CMakeLists.txt  ConsolePlayer.h  GameCore.cpp  GameView.cpp  OptionalPlayer.cpp  Player.cpp  README.md  RandomPlayer.cpp  RandomPlayer.h  Ships.cpp  main.cpp
c-labs/Ternary-System/: CMakeLists.txt  Trit.cpp  Trit.h  TritSet.cpp
(+840 files in other folders)
